--- a/src/notebook/rough.ipynb
+++ b/src/notebook/rough.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +15,404 @@
    ],
    "source": [
     "print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import pymongo\n",
+    "import json\n",
+    "\n",
+    "myclient = pymongo.MongoClient(\"mongodb+srv://mongodb:mongodb@cluster0.lpuwu.mongodb.net/?retryWrites=true&w=majority\")\n",
+    "mydb = myclient[\"Store_Sales\"]\n",
+    "mycol = mydb[\"Sales\"]\n",
+    "\n",
+    "for data in mycol.find():\n",
+    "    del data[\"_id\"]\n",
+    "    df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item_Weight</th>\n",
+       "      <th>Item_Fat_Content</th>\n",
+       "      <th>Item_Visibility</th>\n",
+       "      <th>Item_Type</th>\n",
+       "      <th>Item_MRP</th>\n",
+       "      <th>Outlet_Establishment_Year</th>\n",
+       "      <th>Outlet_Size</th>\n",
+       "      <th>Outlet_Location_Type</th>\n",
+       "      <th>Outlet_Type</th>\n",
+       "      <th>Item_Outlet_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9.30</td>\n",
+       "      <td>Low Fat</td>\n",
+       "      <td>0.016047</td>\n",
+       "      <td>Dairy</td>\n",
+       "      <td>249.8092</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>Supermarket Type1</td>\n",
+       "      <td>3735.1380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.92</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>0.019278</td>\n",
+       "      <td>Soft Drinks</td>\n",
+       "      <td>48.2692</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Tier 3</td>\n",
+       "      <td>Supermarket Type2</td>\n",
+       "      <td>443.4228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17.50</td>\n",
+       "      <td>Low Fat</td>\n",
+       "      <td>0.016760</td>\n",
+       "      <td>Meat</td>\n",
+       "      <td>141.6180</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>Supermarket Type1</td>\n",
+       "      <td>2097.2700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19.20</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Fruits and Vegetables</td>\n",
+       "      <td>182.0950</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Tier 3</td>\n",
+       "      <td>Grocery Store</td>\n",
+       "      <td>732.3800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.93</td>\n",
+       "      <td>Low Fat</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Household</td>\n",
+       "      <td>53.8614</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Tier 3</td>\n",
+       "      <td>Supermarket Type1</td>\n",
+       "      <td>994.7052</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Item_Weight Item_Fat_Content  Item_Visibility              Item_Type  \\\n",
+       "0         9.30          Low Fat         0.016047                  Dairy   \n",
+       "1         5.92          Regular         0.019278            Soft Drinks   \n",
+       "2        17.50          Low Fat         0.016760                   Meat   \n",
+       "3        19.20          Regular         0.000000  Fruits and Vegetables   \n",
+       "4         8.93          Low Fat         0.000000              Household   \n",
+       "\n",
+       "   Item_MRP  Outlet_Establishment_Year Outlet_Size Outlet_Location_Type  \\\n",
+       "0  249.8092                       1999      Medium               Tier 1   \n",
+       "1   48.2692                       2009      Medium               Tier 3   \n",
+       "2  141.6180                       1999      Medium               Tier 1   \n",
+       "3  182.0950                       1998        None               Tier 3   \n",
+       "4   53.8614                       1987        High               Tier 3   \n",
+       "\n",
+       "         Outlet_Type  Item_Outlet_Sales  \n",
+       "0  Supermarket Type1          3735.1380  \n",
+       "1  Supermarket Type2           443.4228  \n",
+       "2  Supermarket Type1          2097.2700  \n",
+       "3      Grocery Store           732.3800  \n",
+       "4  Supermarket Type1           994.7052  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MongoDB:\n",
+    "    def __init__(self,mongodb_url:str,db_name:str,col_name:str,):\n",
+    "        self.mongodb_url = mongodb_url\n",
+    "        self.my_client = pymongo.MongoClient(self.mongodb_url)\n",
+    "        self.db_name = db_name\n",
+    "        self.my_db = self.my_client[self.db_name]\n",
+    "        self.col_name = col_name\n",
+    "        self.my_col = self.my_db[self.col_name]\n",
+    "\n",
+    "    def fetch_all(self,):\n",
+    "        for data in self.my_col.find():\n",
+    "            del data[\"_id\"]\n",
+    "            dataframe = pd.DataFrame(data)\n",
+    "        return dataframe\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mongodb+srv://mongodb:mongodb@cluster0.lpuwu.mongodb.net/?retryWrites=true&w=majority\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import certifi\n",
+    "ca = certifi.where()\n",
+    "\n",
+    "mongodb_url = \"mongodb+srv://mongodb:mongodb@cluster0.lpuwu.mongodb.net/?retryWrites=true&w=majority\"\n",
+    "print(mongodb_url)\n",
+    "db_name = \"Store_Sales\"\n",
+    "col_name = \"Sales\"\n",
+    "\n",
+    "\n",
+    "mongodb = MongoDB(mongodb_url=mongodb_url,db_name=db_name,col_name=col_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item_Weight</th>\n",
+       "      <th>Item_Fat_Content</th>\n",
+       "      <th>Item_Visibility</th>\n",
+       "      <th>Item_Type</th>\n",
+       "      <th>Item_MRP</th>\n",
+       "      <th>Outlet_Establishment_Year</th>\n",
+       "      <th>Outlet_Size</th>\n",
+       "      <th>Outlet_Location_Type</th>\n",
+       "      <th>Outlet_Type</th>\n",
+       "      <th>Item_Outlet_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9.30</td>\n",
+       "      <td>Low Fat</td>\n",
+       "      <td>0.016047</td>\n",
+       "      <td>Dairy</td>\n",
+       "      <td>249.8092</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>Supermarket Type1</td>\n",
+       "      <td>3735.1380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.92</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>0.019278</td>\n",
+       "      <td>Soft Drinks</td>\n",
+       "      <td>48.2692</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Tier 3</td>\n",
+       "      <td>Supermarket Type2</td>\n",
+       "      <td>443.4228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17.50</td>\n",
+       "      <td>Low Fat</td>\n",
+       "      <td>0.016760</td>\n",
+       "      <td>Meat</td>\n",
+       "      <td>141.6180</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>Supermarket Type1</td>\n",
+       "      <td>2097.2700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19.20</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Fruits and Vegetables</td>\n",
+       "      <td>182.0950</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Tier 3</td>\n",
+       "      <td>Grocery Store</td>\n",
+       "      <td>732.3800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.93</td>\n",
+       "      <td>Low Fat</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Household</td>\n",
+       "      <td>53.8614</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Tier 3</td>\n",
+       "      <td>Supermarket Type1</td>\n",
+       "      <td>994.7052</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Item_Weight Item_Fat_Content  Item_Visibility              Item_Type  \\\n",
+       "0         9.30          Low Fat         0.016047                  Dairy   \n",
+       "1         5.92          Regular         0.019278            Soft Drinks   \n",
+       "2        17.50          Low Fat         0.016760                   Meat   \n",
+       "3        19.20          Regular         0.000000  Fruits and Vegetables   \n",
+       "4         8.93          Low Fat         0.000000              Household   \n",
+       "\n",
+       "   Item_MRP  Outlet_Establishment_Year Outlet_Size Outlet_Location_Type  \\\n",
+       "0  249.8092                       1999      Medium               Tier 1   \n",
+       "1   48.2692                       2009      Medium               Tier 3   \n",
+       "2  141.6180                       1999      Medium               Tier 1   \n",
+       "3  182.0950                       1998        None               Tier 3   \n",
+       "4   53.8614                       1987        High               Tier 3   \n",
+       "\n",
+       "         Outlet_Type  Item_Outlet_Sales  \n",
+       "0  Supermarket Type1          3735.1380  \n",
+       "1  Supermarket Type2           443.4228  \n",
+       "2  Supermarket Type1          2097.2700  \n",
+       "3      Grocery Store           732.3800  \n",
+       "4  Supermarket Type1           994.7052  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = mongodb.fetch_all()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv(r\"D:\\cassandra_db_api\\Train_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset.columns)"
    ]
   },
   {
